# Testing-ofronds-watch-structure

./: dune  dune-project
1_variables/: a_fi.ml  b_fa.ml  c_foo.ml  dune
2_functions/: a_bla.ml  b_blu.ml  dune
